tests/parse_errors/wrong_instruction.src
.IPPcode18
LABEEEEL test